# utils

./: .clang-format  .gitignore  CMakeLists.txt  README.md  array.c  array.h  circular_buffer.c  circular_buffer.h  debug_tree.c  debug_tree.h  filemapping.h  hashmap.c  hashmap.h  ini.c  ini.h  io.c  io.h  ioext.c  ioext.h  md5.c  md5.h  traversedir.c  traversedir.h
c/: array.c  debug_tree.h  filemapping.c  hashmap.c  ini.c  ioext.h  md5.c  md5.h  traversedir.c  traversedir.h
c/tests/: CMakeLists.txt  build.bat  hashmap_test.cpp  main.cpp  sscanf_test.cpp
cpp/: array.h  dl_list.h  serialize.h  tuple_util.h
cpp/test/: array_test.cpp  dl_list_test.cpp  serialize_test.cpp  tuple_util_test.cpp
tests/: array_test.cpp  circular_buffer_test.cpp  hashmap_test.cpp  io_ext_test.cpp
tests/googletest/: README.md
unity/: AndroidAssetStream.cs  ControlAttribute.cs  DNS.cs  DynamicObject.cs  EventHelper.cs  IO.cs  Log.cs  PackageSocket.cs  README.md  SimpleAnimator.cs  SingletonMonoBehaviour.cs  Util.cs
unity/Editor/: AnimationClipSize.cs
